syntax = "proto3";

package tcat_serialized;

message Point {
    double x = 1;
    double y = 2;
}

message Rgb {
    uint32 r = 1;
    uint32 g = 2;
    uint32 b = 3;
}

message Rgba {
    uint32 r = 1;
    uint32 g = 2;
    uint32 b = 3;
    double opacity = 4;
}

message Color {
    string string_value = 1;
    Rgb rgb_value = 2;
    Rgba rgba_value = 3;
}